--- a/client/assets/sass/app.scss
+++ b/client/assets/sass/app.scss
@@ -1,3 +1,25 @@
-.test {
-  font-size: 1rem;
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+body{
+  color: #424242;
+}
+
+a{
+  text-decoration: none;
+  color: #424242;
+}
+
+ul, li{
+  list-style: none;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 300;
+  color: #424242;
+  font-size: 10px;
+  padding:0;
+  border: 0;
+  margin: 0;
+  display: inline;
 }
