--- a/client/assets/sass/paragraph.scss
+++ b/client/assets/sass/paragraph.scss
@@ -1,5 +1,5 @@
-div{
-  width: 310px;
+.paragraph{
+  width: 89.3333333333vw;;
   padding:0;
   border: 0;
   margin: 0 auto 50px;
@@ -11,14 +11,14 @@ div{
     text-align: center;
     margin: 0 auto;
     height:auto;
+  }
 
-    h2{
-      font-family: 'Noto Sans JP', sans-serif;
-      font-weight: 700;
-      font-size: 10px;
-      text-align: center;
-      margin: -4px auto;
-    }
+  h2{
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+    text-align: center;
+    margin: -4px auto;
   }
 
   p{
