--- a/client/assets/sass/app.scss
+++ b/client/assets/sass/app.scss
@@ -23,3 +23,12 @@ ul, li{
   margin: 0;
   display: inline;
 }
+
+.mapboxgl-popup-content {
+    position: relative;
+    background: #000 !important;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    padding: 10px 10px 15px;
+    pointer-events: auto;
+}
