--- a/client/assets/sass/popup.scss
+++ b/client/assets/sass/popup.scss
@@ -1,7 +1,9 @@
 .mapboxgl-popup-content {
     color: white;
     position: relative;
-    background: #000 !important;
+    left: 10px;
+    top: 10px;
+    background: #FFF;
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
     padding: 10px 10px 15px;
